# mcp-native-guard

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MCP_NATIVE_GUARD_REVISED_ROADMAP.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.cursor/: mcp.json
benchmarks/: CMakeLists.txt  framer_benchmark.cpp  proxy_pipeline_benchmark.cpp
docs/: architecture.md  design.md  inspect.md  managed-local-deployment.md  performance-plan.md  policy-create.md  real-mcp-smoke-test.md  release-0.1-checklist.md  threat-model.md
examples/: filesystem-policy.json  policy.json
examples/launchers/: filesystem-readonly.sh  generic-stdio.sh
examples/systemd/: mcp-native-guard-smoke.service  mcp-native-guard-smoke.timer
include/mcp_native_guard/: version.hpp.in
include/mcp_native_guard/audit/: audit_sink.hpp
include/mcp_native_guard/core/: status.hpp
include/mcp_native_guard/io/: atomic_file_writer.hpp  line_framer.hpp
include/mcp_native_guard/process/: client_message_handler.hpp  doctor.hpp  inspect.hpp  linux_stdio_relay.hpp  policy_create.hpp
include/mcp_native_guard/protocol/: json_rpc_envelope.hpp  runtime_limits.hpp  tool_call_extractor.hpp  tool_call_filter.hpp  tool_inventory.hpp
include/mcp_native_guard/proxy/: proxy_core.hpp
include/mcp_native_guard/security/: policy.hpp  policy_generator.hpp  policy_loader.hpp
scripts/: audit_health_summary.py  smoke_real_mcp.sh
src/: atomic_file_writer.cpp  audit_sink.cpp  doctor.cpp  inspect.cpp  json_rpc_envelope.cpp  json_scanner.hpp  line_framer.cpp  linux_stdio_relay.cpp  main.cpp  policy.cpp  policy_create.cpp  policy_generator.cpp  policy_loader.cpp  proxy_core.cpp  tool_call_extractor.cpp  tool_call_filter.cpp  tool_inventory.cpp
test_servers/: CMakeLists.txt  mng_test_mcp_server.cpp
tests/: CMakeLists.txt  codex_cloud_smoke.cpp  inspect_integration_test.cpp  jsonl_echo_server.cpp  policy_create_integration_test.cpp  run_integration_test.cpp  session_health_integration_test.cpp  test_audit_health_summary.py  test_main.cpp
